infra/manifests/elasticsearch/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: search
  labels:
    app.kubernetes.io/name: elasticsearch
    app.kubernetes.io/part-of: hybrid-search
spec:
  selector:
    elasticsearch.k8s.elastic.co/cluster-name: elasticsearch
  ports:
    - name: http
      protocol: TCP
      port: 9200
      targetPort: 9200
