infra/manifests/elasticsearch/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: elasticsearch-kibana-policy
  namespace: search
spec:
  podSelector:
    matchExpressions:
      - key: common.k8s.elastic.co/type
        operator: In
        values:
          - elasticsearch
          - kibana
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: search
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kserve-inference
      ports:
        - protocol: TCP
          port: 9200
        - protocol: TCP
          port: 5601
  egress:
    - {}
